# tauri-nextjs-template

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
app/: Providers.tsx  layout.tsx  page.tsx
app/components/: Greet.tsx  NoSSR.tsx
app/trpc/: bindings.ts  client.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/prisma/: schema.prisma
src-tauri/src/: main.rs
