[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["Dr.Sabry"]
license = ""
repository = ""
default-run = "app"
edition = "2021"

[[bin]]
name = "prisma"
path = "src/prisma-cli.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11" }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.2", features = [] }
rspc = { version = "0.1.3", features = ["tauri"] }
tokio = { version = "1.35.1", features = ["full"] }
thiserror = "1.0.56"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release.package.wry]
debug = true
debug-assertions = true
